test/error/error.input124.zc
Cannot ++ on rvalue on line 6
